test/negative/profile_removed_idiomatic/compile.hxml
-cp .
-lib reflaxe.rust
-D reflaxe_rust_profile=idiomatic
-D rust_output=out
-main Main
